# player

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: app.tsx  chat-message.ts  draggable-resizable.tsx  index.css  index.tsx  player.tsx  watch.tsx
src-tauri/: Cargo.toml  cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/chat/: chat-message.tsx  chat.tsx
src/constants/: errors.ts
src/interfaces/: chat.interface.ts  index.ts  message.interface.ts  video.interface.ts
src/providers/: tvp.ts  wykop-chat.ts
