[package]
name = "player"
version = "0.2.2"
description = "player"
authors = ["bpawel10"]
license = "UNLICENSE"
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2.0", features = [] }

[dependencies]
axum = "0.5.17"
bs58 = "0.4.0"
http = "0.2.8"
m3u8-rs = "5.0.2"
reqwest = "0.11.12"
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
tauri = { version = "1.2.0", features = ["http-all", "window-set-fullscreen"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["cors"] }
url = "2.3.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
